@@ -1,7 +1,9 @@
 package leetcode39;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Deque;
 import java.util.List;
 
 /**
@@ -37,33 +39,30 @@ import java.util.List;
 public class Leetcode39 {
 
     public List<List<Integer>> combinationSum(int[] candidates, int target) {
-        List<List<Integer>> ans = new ArrayList<>();
-        List<Integer> combine = new ArrayList<>();
-
+        // 排序是剪枝的前提
         Arrays.sort(candidates);
 
-        dfs(candidates, target, ans, combine, 0);
-        return ans;
+        List<List<Integer>> res = new ArrayList<>();
+        Deque<Integer> path = new ArrayDeque<>();
+        dfs(candidates, 0, target, path, res);
+
+        return res;
     }
 
-    public void dfs(int[] candidates, int target, List<List<Integer>> ans, List<Integer> combine, int idx) {
-        if (idx == candidates.length) {
-            return;
-        }
+    private void dfs(int[] candidates, int begin, int target, Deque<Integer> path, List<List<Integer>> res) {
         if (target == 0) {
-            ans.add(new ArrayList<>(combine));
+            res.add(new ArrayList<>(path));
             return;
         }
-        if (candidates[idx] > target) {
-            return;
-        }
-        // 直接跳过
-        dfs(candidates, target, ans, combine, idx + 1);
-        // 选择当前数
-        if (target - candidates[idx] >= 0) {
-            combine.add(candidates[idx]);
-            dfs(candidates, target - candidates[idx], ans, combine, idx);
-            combine.remove(combine.size() - 1);
+
+        for (int i = begin; i < candidates.length; i++) {
+            if (target < candidates[i]) {
+                break;
+            }
+
+            path.addLast(candidates[i]);
+            dfs(candidates, i, target - candidates[i], path, res);
+            path.removeLast();
         }
     }
 
